# tsf-classification

./: main.py  pyproject.toml
datasets/: churn.py
factories/: models.py
models/: base.py  mock.py
models/tsf/: mock.py
src/: data_structures.py  models.py  predictor.py
src/tests/: __init__.py  test_data_structures.py  test_integration.py  test_models.py  test_predictor.py
