[project]
name = "tsf-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.mypy]
strict = true
exclude = [".venv"]

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle Error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle Warning
]
ignore = [
    "E501",  # line-too-long
]

[tool.uv.workspace]
members = [
    "tsf-classification",
]
